Removed all deprecations