@@ -1,5 +1,7 @@
 package com.rs.java.game.npc.combat;
 
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 import com.rs.java.game.Entity;
@@ -14,24 +16,24 @@ public class CombatScriptsHandler {
 	private static final CombatScript DEFAULT_SCRIPT = new Default();
 	protected transient Player player;
 
-	@SuppressWarnings("rawtypes")
-	public static final void init() {
+	public static void init() {
 		try {
-			Class[] classes = Utils.getClasses("com.rs.java.game.npc.combat.impl");
-			for (Class c : classes) {
-				if (c.isAnonymousClass()) // next
+			Class<?>[] classes = Utils.getClasses("com.rs.java.game.npc.combat.impl");
+			for (Class<?> c : classes) {
+				if (c.isAnonymousClass())
 					continue;
-				Object o = c.newInstance();
-				if (!(o instanceof CombatScript))
+				Object o = c.getDeclaredConstructor().newInstance();
+				if (!(o instanceof CombatScript script))
 					continue;
-				CombatScript script = (CombatScript) o;
-				for (Object key : script.getKeys())
+                for (Object key : script.getKeys())
 					cachedCombatScripts.put(key, script);
 			}
-		} catch (Throwable e) {
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException |
+                 ClassNotFoundException | IOException e) {
 			Logger.handle(e);
 		}
 	}
+
 
 	public static int specialAttack(final NPC npc, final Entity target) {
 		CombatScript script = cachedCombatScripts.get(npc.getId());
