@@ -1,5 +1,6 @@
 package com.rs.java.game.player.dialogues;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 import com.rs.java.utils.Logger;
@@ -11,7 +12,7 @@ public final class DialogueHandler {
 
 	@SuppressWarnings(
 	{ "unchecked" })
-	public static final void init() {
+	public static void init() {
 		try {
 			Class<Dialogue>[] regular = Utils.getClasses("com.rs.java.game.player.dialogues");
 			for (Class<Dialogue> c : regular) {
@@ -144,24 +145,25 @@ public final class DialogueHandler {
 		}
 	}
 
-	public static final void reload() {
+	public static void reload() {
 		handledDialogues.clear();
 		init();
 	}
 
-	public static final Dialogue getDialogue(Object key) {
+	public static Dialogue getDialogue(Object key) {
 		if (key instanceof Dialogue)
 			return (Dialogue) key;
 		Class<? extends Dialogue> classD = handledDialogues.get(key);
 		if (classD == null)
 			return null;
 		try {
-			return classD.newInstance();
-		} catch (Throwable e) {
+			return classD.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			Logger.handle(e);
 		}
 		return null;
 	}
+
 
 	private DialogueHandler() {
 
